Modify the tests to use mkl_intel_ilp64_.so with function name suffix 64_

--- a/miscompile/Makefile
+++ b/miscompile/Makefile
@@ -1,11 +1,11 @@
 all: run
 
-MKL_ROOT=/opt/intel/mkl
-CPPFLAGS += -I$(MKL_ROOT)/include
+MKL_ROOT=/export/users/ptu1/workspace/mkl/src/__release_lnx/mkl
+CPPFLAGS += -I$(MKL_ROOT)/include -std=c99
 LDFLAGS += -L$(MKL_ROOT)/lib/intel64 -Wl,-rpath,$(MKL_ROOT)/lib/intel64
 
 foo: foo.c
-	$(CC) $< $(CPPFLAGS) -DMKL_ILP64=1 $(LDFLAGS) -lmkl_rt -o $@
+	$(CC) $< $(CPPFLAGS) -DMKL_ILP64=1 $(LDFLAGS) -lmkl_intel_ilp64_ -lmkl_sequential -lmkl_core -lm -o $@
 
 run: foo
 	@./foo
